Working on cucumber test for user management. Updated some layout issues on application.html.erb and partials

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -47,7 +47,9 @@ margin-top: -90px}
     padding-bottom: 0px;
     display: inline-block;
     margin: 0; }
-
+.section_header h2 {
+    font-size: 50px;
+}
 /* Footer
 -------------------------------------------------- */
 #footer {
